--- a/index.html
+++ b/index.html
@@ -2,17 +2,36 @@
 <!--이 부분은 주석문입니다. 웹 브라우저는 주석을 화면에 출력하지 않습니다.-->
 <html>
     <head>
-        <p style="text-align:left;">
+        <meta name="author" content="20200058">
+		<mete charset="utf-8">
+		<meta name="keywords" content="computer">
+		<base href="https://web--imqpb.run.goorm.site/">
+    </head>
+    <body>
+		<p style="text-align:left;">
             <font size="2em" color="green">문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의</font>
         </p>
         <br>
         <! br은 줄 바꿈입니다.>
-    </head>
-    <body>
-        <p style="text-align:center"><img src="img/Googleimage.png" alt="구글이미지"></p>
+		<p style="text-align:center"><a href="index.html" target="_blank"><img src="img/Googleimage.png" alt="구글이미지"></a></p>
         <! img 태그는 이미지를 삽입합니다. src=경로, 이미지 깨지면 alt 출력>
         <br>
         <! br은 줄 바꿈입니다.>
+		<! 아래는 검색창>
+		<p style="text-align:center">검색:<input type="text" name="search"size="55"value=""><br></p>
+		</p>
+		<br><br><br><br><br><br><! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.>
+		<table style="margin-left: auto; margin-right: auto;" border="1">
+		<! 테이블을 정의합니다.>
+			<caption>인기 검색어</caption> <!테이블 제목.>
+			<tbody>
+			    <tr><td bgcolor="green" width="50"><b>영화</b></td><td width="100" bgcolor="blue">아저씨</td><td width="100" bgcolor="blue">아저씨</td><td width="100">어머니</td><td width="100">헬머니</td><td>할부지</td></tr><! 1행 추가.>
+				<tr bgcolor="red"><td width="50"><b>음악</b></td><td>K-POP</td><td>J-POP</td><td>ROCK</td><td rowspan="2">EUROBEAT</td></tr><! 2행 추가.>
+				<tr bgcolor="red"><td colspan="2" width="50">게임
+				</td><td>LOL</td><td>WOW</td><td>SUDDEN</td></tr> <! 3행 추가.>
+			</tbody>
+		</table>
+	
         <p style="text-align:right;">
             <font size="3em" color="red">문서의 본문 텍스트, 이미지, 테이블, 자바스크립트 코드, 동영상 등</font>
         </p>
