--- a/index.html
+++ b/index.html
@@ -17,18 +17,21 @@
         <! img 태그는 이미지를 삽입합니다. src=경로, 이미지 깨지면 alt 출력>
         <br>
         <! br은 줄 바꿈입니다.>
-		<! 아래는 검색창>
+		<! 검색창코드시작>
 		<p style="text-align:center">검색:<input type="text" name="search"size="55"value=""><br></p>
-		</p>
-		<br><br><br><br><br><br><! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.>
+		<br><br><br><br><br><br><! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.검색창코드 끝>
 		<table style="margin-left: auto; margin-right: auto;" border="1">
 		<! 테이블을 정의합니다.>
 			<caption>인기 검색어</caption> <!테이블 제목.>
 			<tbody>
-			    <tr><td bgcolor="green" width="50"><b>영화</b></td><td width="100" bgcolor="blue">아저씨</td><td width="100" bgcolor="blue">아저씨</td><td width="100">어머니</td><td width="100">헬머니</td><td>할부지</td></tr><! 1행 추가.>
-				<tr bgcolor="red"><td width="50"><b>음악</b></td><td>K-POP</td><td>J-POP</td><td>ROCK</td><td rowspan="2">EUROBEAT</td></tr><! 2행 추가.>
-				<tr bgcolor="red"><td colspan="2" width="50">게임
-				</td><td>LOL</td><td>WOW</td><td>SUDDEN</td></tr> <! 3행 추가.>
+			    <tr><td bgcolor="green" width="50"><b>영화</b></td>
+					<td width="100" bgcolor="blue">아저씨</td><td width="100" bgcolor="blue">아저씨</td><td width="100">어머니</td><td width="100">헬머니</td><td>할부지</td></tr><! 1행 추가.>
+				<tr bgcolor="red"><td width="50"><b>음악</b></td><td>K-POP</td><td>J-POP</td><td>ROCK1</td><td>ROCK2</td><td rowspan="2">EUROBEAT</td></tr><! 2행 추가.>
+				<tr bgcolor="red"><td colspan="2" width="50">게임</td><td>LOL</td><td>WOW</td><td>SUDDEN</td></tr> <! 3행 추가.>
+				<tr><td colspan="6"><b>외부 사이트 링크</b></td></tr> <! 4행 추가.>
+				<tr><td colspan="2"><a href="https://www.naver.com/">네이버</a></td><td bgcolor="yellow" colspan="2"><a href="https://www.daum.net/">다음</a></td>
+					<td bgcolor="purple" colspan="2"><a href="https://www.nate.com/"><font color="white">네이트</font></a></td></tr><! 5행 추가.>
+				
 			</tbody>
 		</table>
 	
