--- a/index.html
+++ b/index.html
@@ -1,36 +1,86 @@
 <!DOCTYPE html>
 <!--이 부분은 주석문입니다. 웹 브라우저는 주석을 화면에 출력하지 않습니다.-->
-<html>
+<html lang="en">
     <head>
         <meta name="author" content="20200058">
 		<mete charset="utf-8">
 		<meta name="keywords" content="computer">
 		<base href="https://web--imqpb.run.goorm.site/">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+		<script type="text/javascript" src="js/search.js" defer></script>
+
+
+
     </head>
     <body>
-		<p style="text-align:left;">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+		<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">전체 메뉴</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#" target="_blank">홈페이지</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html" target="_blank">검색</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.youtube.com/" target="_blank">YOUTUBE</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="https://map.kakao.com/" target="_blank">지도</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="https://mail3.nate.com/" target="_blank">메일</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="https://play.google.com/" target="_blank">플레이스토어</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            기타 웹사이트
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="https://www.naver.com/" target="_blank">네이버</a></li>
+            <li><a class="dropdown-item" href="https://www.daum.net/" target="_blank">다음</a></li>
+            <li><a class="dropdown-item" href="https://www.nate.com/" target="_blank">네이트</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  
+		<!--<p style="text-align:left;">
             <font size="2em" color="green">문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의</font>
-        </p>
+        </p>-->
         <br>
         <! br은 줄 바꿈입니다.>
-		<p style="text-align:center"><a href="index.html" target="_blank"><img src="img/Googleimage.png" alt="구글이미지"></a></p>
+		<div class="mx-auto" style="width: 400px;"><a href="index.html" target="_blank"><img src="img/Googleimage.png" class="img-fluid" alt="구글이미지"></a></div>
         <! img 태그는 이미지를 삽입합니다. src=경로, 이미지 깨지면 alt 출력>
         <br>
         <! br은 줄 바꿈입니다.>
 		<! 검색창코드시작>
-		<p style="text-align:center">검색:<input type="text" name="search"size="55"value=""><br></p>
+		<p style="text-align:center">검색:<input type="text" name="search" size="55" value="">
+			<button id="search_btn" type="button">검색</button><br></p> <! 버튼>
 		<br><br><br><br><br><br><! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.검색창코드 끝>
-		<table style="margin-left: auto; margin-right: auto;" border="1">
+		<table style="margin-left: auto; margin-right: auto;" border="1" width="500">
 		<! 테이블을 정의합니다.>
-			<caption>인기 검색어</caption> <!테이블 제목.>
+			<caption align="top">인기 검색어</caption> <!테이블 제목.>
 			<tbody>
 			    <tr><td bgcolor="green" width="50"><b>영화</b></td>
 					<td width="100" bgcolor="blue">아저씨</td><td width="100" bgcolor="blue">아저씨</td><td width="100">어머니</td><td width="100">헬머니</td><td>할부지</td></tr><! 1행 추가.>
 				<tr bgcolor="red"><td width="50"><b>음악</b></td><td>K-POP</td><td>J-POP</td><td>ROCK1</td><td>ROCK2</td><td rowspan="2">EUROBEAT</td></tr><! 2행 추가.>
 				<tr bgcolor="red"><td colspan="2" width="50">게임</td><td>LOL</td><td>WOW</td><td>SUDDEN</td></tr> <! 3행 추가.>
 				<tr><td colspan="6"><b>외부 사이트 링크</b></td></tr> <! 4행 추가.>
-				<tr><td colspan="2"><a href="https://www.naver.com/">네이버</a></td><td bgcolor="yellow" colspan="2"><a href="https://www.daum.net/">다음</a></td>
-					<td bgcolor="purple" colspan="2"><a href="https://www.nate.com/"><font color="white">네이트</font></a></td></tr><! 5행 추가.>
+				<tr><td colspan="2"><a href="https://www.naver.com/" target="_blank">네이버</a></td><td bgcolor="yellow" colspan="2"><a href="https://www.daum.net/" target="_blank">다음</a></td>
+					<td bgcolor="purple" colspan="2"><a href="https://www.nate.com/"><font color="white" target="_blank">네이트</font></a></td></tr><! 5행 추가.>
 				
 			</tbody>
 		</table>
@@ -41,4 +91,15 @@
         <br>
         <! br은 줄 바꿈입니다.>
     </body>
+	<br><br><br><br><br><br><br><br>
+   <footer class="bg-light text-center text-lg-start">
+     <div class="text-center p-3" style="background-color:#D8D8D8;">
+    <h3 class="text-secondary">FOOTER TEST</h3>
+    © 2020 Copyright: <a class="text-dark" href="https://꾸글.com/">꾸글.com</a>
+      <i class="bi bi-facebook" style="color: #3b5998; font-size: 2rem;"></i>
+      <i class="bi bi-twitter" style="color: #55acee; font-size: 2rem;"></i>
+      <i class="bi bi-instagram" style="color: #ac2bac; font-size: 2rem;"></i>
+     </div>
+   </footer>
+		
 </html>
