--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--이 부분은 주석문입니다. 웹 브라우저는 주석을 화면에 출력하지 않습니다.-->
 <html lang="en">
-    <head>
+<head>
         <meta name="author" content="20200058">
 		<mete charset="utf-8">
 		<meta name="keywords" content="computer">
@@ -10,14 +10,13 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 		<script type="text/javascript" src="js/search.js" defer></script>
+        <script type="text/javascript" src="js/basic_test.js" defer></script>
 
-
-
-    </head>
-    <body>
+</head>
+<body>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 		<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
+    <div class="container-fluid">
     <a class="navbar-brand" href="#">전체 메뉴</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -64,14 +63,27 @@
         <! br은 줄 바꿈입니다.>
 		<div class="mx-auto" style="width: 400px;"><a href="index.html" target="_blank"><img src="img/Googleimage.png" class="img-fluid" alt="구글이미지"></a></div>
         <! img 태그는 이미지를 삽입합니다. src=경로, 이미지 깨지면 alt 출력>
-        <br>
-        <! br은 줄 바꿈입니다.>
-		<! 검색창코드시작>
-		<p style="text-align:center">검색:<input type="text" name="search" size="55" value="">
+        <br> <! br은 줄 바꿈입니다.>
+		<! 새로운 검색창 정의>
+		<form action="https://www.google.co.kr/search" method="GET" target="_blank">
+			<div class="d-flex justify-content-center">
+				<mx-auto>
+                    <input name="query" type="text" class="form-control-lg" placeholder="검색어 입력" aria-label="search" aria-describedby="search_btn" id="search_text">
+                </mx-auto>
+                <button class="btn btn-success" type="submit" id="search_btn">검색</button>
+           </div>
+        </form>
+		<br><br><br><br><br><br>
+        <! 기존 검색창 주석처리>
+		<!--<p style="text-align:center">검색:<input type="text" name="search" size="55" value="">
 			<button id="search_btn" type="button">검색</button><br></p> <! 버튼>
 		<br><br><br><br><br><br><! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.검색창코드 끝>
-		<table style="margin-left: auto; margin-right: auto;" border="1" width="500">
-		<! 테이블을 정의합니다.>
+		<table style="margin-left: auto; margin-right: auto;" border="1" width="500">-->
+		<! 기존 테이블을 주석처리>
+	<!--<div class="w-auto p-3" style="background-color: #;">
+        <!-- <table class="table table-striped table-bordered table-hover">
+        <table class="table table-dark table-hover">
+
 			<caption align="top">인기 검색어</caption> <!테이블 제목.>
 			<tbody>
 			    <tr><td bgcolor="green" width="50"><b>영화</b></td>
@@ -84,13 +96,49 @@
 				
 			</tbody>
 		</table>
-	
-        <p style="text-align:right;">
+	</div> -->
+	 <! 새로운 테이블 정의>
+	<div class="w-auto p-3" style="background-color: #;">
+        <!-- <table class="table table-striped table-bordered table-hover"> -->
+        <table class="table table-dark table-hover">
+	<!--<caption align="top">인기 검색어</caption>-->
+	<caption align="top">현재 검색어 : <p id="search_message"></p></caption>
+	<tbody class="table-group-divider">
+                <tr bgcolor="yellow">
+                    <td class="table-primary" width="50"><b>영화</b>
+                    </td>
+                    <td width="80" bgcolor="blue">아저씨</td>
+                    <td width="80" bgcolor="blue">아저씨</td>
+                    <td width="100">어머니</td>
+                    <td width="100">헬머니</td>
+                    <td>할부지</td>
+                </tr>
+                <tr bgcolor="red">
+                    <td class="table-secondary" width="50"><b>음악</b></td>
+                    <td>KPOP</td>
+                    <td>JPOP</td>
+                    <td>ROCK1</td>
+                    <td>ROCK2</td>
+                    <td>EUROBEAT</td>
+                </tr>
+	            <tr bgcolor="blue">
+                    <td class="table-success" width="50"><b>게임</b></td>
+                    <td>LOL</td>
+                    <td>WOW</td>
+                    <td>DIABLO</td>
+                    <td colspan="2">SUDDEN ATTACK 2</td>
+                </tr>
+		        <tr><td colspan="6"><b>외부 사이트 링크</b></td></tr> <! 4행 추가.>
+				<tr><td colspan="2"><a href="https://www.naver.com/" target="_blank">네이버</a></td><td bgcolor="yellow" colspan="2"><a href="https://www.daum.net/" target="_blank">다음</a></td>
+					<td bgcolor="purple" colspan="2"><a href="https://www.nate.com/"><font color="white" target="_blank">네이트</font></a></td></tr><! 5행 추가.>
+            </tbody>
+        </table>
+        </div>
+		<p style="text-align:right;">
             <font size="3em" color="red">문서의 본문 텍스트, 이미지, 테이블, 자바스크립트 코드, 동영상 등</font>
         </p>
-        <br>
-        <! br은 줄 바꿈입니다.>
-    </body>
+        <br><! br은 줄 바꿈입니다.>
+</body>
 	<br><br><br><br><br><br><br><br>
    <footer class="bg-light text-center text-lg-start">
      <div class="text-center p-3" style="background-color:#D8D8D8;">
