--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
         <meta name="author" content="20200058">
-		<mete charset="utf-8">
+		<meta charset="utf-8">
 		<meta name="keywords" content="computer">
 		<base href="https://web--imqpb.run.goorm.site/">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,9 +11,11 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 		<script type="text/javascript" src="js/search.js" defer></script>
         <script type="text/javascript" src="js/basic_test.js" defer></script>
+		<script type="text/javascript" src="js/data_type.js" defer></script>
+	    <script type="text/javascript" src="js/pop_up.js" defer></script>
 
 </head>
-<body>
+<body onload="pop_up();">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 		<nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
