--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <script type="text/javascript" src="js/basic_test.js" defer></script>
 		<script type="text/javascript" src="js/data_type.js" defer></script>
 	    <script type="text/javascript" src="js/pop_up.js" defer></script>
-
+	    <script type="text/javascript" src="js/array_test.js" defer></script>
+	    
 </head>
 <body onload="pop_up();">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
