--- a/index_login.html
+++ b/index_login.html
@@ -14,9 +14,10 @@
 		<script type="text/javascript" src="js/data_type.js" defer></script>
 	    <script type="text/javascript" src="js/pop_up.js" defer></script>
 	    <script type="text/javascript" src="js/array_test.js" defer></script>
+	    <script type="text/javascript" src="js/login.js" defer></script>
 	    
 </head>
-<body onload="pop_up();">
+<body onload="get_id();">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 		<nav class="navbar navbar-expand-lg bg-light"><!--네비게이션바-->
     <div class="container-fluid">
@@ -48,15 +49,16 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             기타 웹사이트
           </a>
-		  </li>
+		</li>
 		<li class="nav-item">
-	    <button class="btn btn-outline-success" type="submit" onclick="location.href='login/login.html'">로그인</button>
+	    <button class="btn btn-outline-success" type="submit" onclick="logout()">로그아웃</button>
         </li>
+
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://www.naver.com/" target="_blank">네이버</a></li>
             <li><a class="dropdown-item" href="https://www.daum.net/" target="_blank">다음</a></li>
             <li><a class="dropdown-item" href="https://www.nate.com/" target="_blank">네이트</a></li>
-          </ul>
+		  </ul>
     </div>
   </div>
 </nav>
