--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<script type="text/javascript" src="js/data_type.js" defer></script>
 	    <script type="text/javascript" src="js/pop_up.js" defer></script>
 	    <script type="text/javascript" src="js/array_test.js" defer></script>
+	
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
 	    
 </head>
 <body onload="pop_up();">
@@ -50,7 +52,7 @@
           </a>
 		  </li>
 		<li class="nav-item">
-	    <button class="btn btn-outline-success" type="submit" onclick="location.href='login/login.html'">로그인</button>
+	    <button class="btn btn-outline-success" type="submit" onclick="location.href='login.html'">로그인</button>
         </li>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://www.naver.com/" target="_blank">네이버</a></li>
