--- a/index_login.html
+++ b/index_login.html
@@ -15,7 +15,9 @@
 	    <script type="text/javascript" src="js/pop_up.js" defer></script>
 	    <script type="text/javascript" src="js/array_test.js" defer></script>
 	    <script type="text/javascript" src="js/login.js" defer></script>
-	    
+	
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
+
 </head>
 <body onload="get_id();">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
