--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 	    <script type="text/javascript" src="js/login.js" defer></script>
 	    
 </head>
-<body class="text-center">
+<body class="text-center" onload="init();">
 	<div class="mx-auto" style="width: 400px;"><a href="index.html" target="_blank"><img src="img/Googleimage.png" class="img-fluid" alt="구글이미지"></a></div>
         <! img 태그는 이미지를 삽입합니다. src=경로, 이미지 깨지면 alt 출력>
     <br><br><br>
@@ -35,7 +35,7 @@
 
         <div class="checkbox mb-3">
           <label>
-            <input type="checkbox" value="remember-me"> 아이디 저장
+            <input type="checkbox" value="remember-me" id="idSaveCheck"> 아이디 저장
           </label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" onclick="login()" type="submit">로그인 하기</button>
