12주차 실습내용

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<li class="nav-item">
 	    <button class="btn btn-outline-success" type="submit" onclick="location.href='login.html'">로그인</button>
         </li>
+		<button class="btn btn-outline-success" type="submit" onclick="location.href='join.html'">회원가입</button>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://www.naver.com/" target="_blank">네이버</a></li>
             <li><a class="dropdown-item" href="https://www.daum.net/" target="_blank">다음</a></li>
