--- a/index_login.html
+++ b/index_login.html
@@ -64,6 +64,21 @@
     </div>
   </div>
 </nav>
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="#">하단 메뉴</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="profile/profile.html" target='_blank'>소개 페이지</a>
+        </li>
+        </ul>
+    </div>
+    </div>
+</nav>
   
 		<!--<p style="text-align:left;">
             <font size="2em" color="green">문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의</font>
