마무리 + 스크린샷

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -14,8 +14,9 @@
 		<script type="text/javascript" src="js/data_type.js" defer></script>
 	    <script type="text/javascript" src="js/pop_up.js" defer></script>
 	    <script type="text/javascript" src="js/array_test.js" defer></script>
-	
+	    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f40eb52f8b930b3e5860da63f4939cf3" autoload=false></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
+	    
 	    
 </head>
 <body>
@@ -38,7 +39,7 @@
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSPxliccSvodnSAgl3UaJdMWFigduYjlk0lQ&usqp=CAU" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">손수민</h5>
             <p class="text-muted mb-1">대학생</p>
@@ -128,6 +129,7 @@
 			<div class="embed-responsive embed-responsive-16by9" style="margin: 0 auto;">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/l0JfCluVH1o" width="800" height="600" frameborder="0" allowfullscreen></iframe>
 			</div>
+			<div id="map" style="width:800px;height:600px; margin: 0 auto;"></div>
         </div>
       </div>
     </div>
