--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         <! img 태그는 이미지를 삽입합니다. src=경로, 이미지 깨지면 alt 출력>
         <br> <! br은 줄 바꿈입니다.>
 		<! 새로운 검색창 정의>
-		<form action="https://www.google.co.kr/search" method="GET" target="_blank">
-			<div class="d-flex justify-content-center">
-				<mx-auto>
-                    <input name="query" type="text" class="form-control-lg" placeholder="검색어 입력" aria-label="search" aria-describedby="search_btn" id="search_text">
+		<form id="form_main" action="https://www.google.co.kr/search" method="GET" target="_blank" onsubmit="return false">
+            <div class="d-flex justify-content-center">
+                <mx-auto>
+                    <input name="query" type="text" class="form-control-lg" placeholder="검색어 입력" aria-label="search" aria-describedby="search_btn" id="search_txt">
                 </mx-auto>
                 <button class="btn btn-success" type="submit" id="search_btn">검색</button>
-           </div>
+            </div>
         </form>
 		<br><br><br><br><br><br>
         <! 기존 검색창 주석처리>
@@ -102,7 +102,7 @@
 			<button id="search_btn" type="button">검색</button><br></p> <! 버튼>
 		<br><br><br><br><br><br><! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.검색창코드 끝>
 		<table style="margin-left: auto; margin-right: auto;" border="1" width="500">-->
-		<! 기존 테이블을 주석처리>
+		<! 기존 테이블을 주석처리(응용문제1)>
 	<!--<div class="w-auto p-3" style="background-color: #;">
         <!-- <table class="table table-striped table-bordered table-hover">
         <table class="table table-dark table-hover">
