--- a/index_join.html
+++ b/index_join.html
@@ -9,17 +9,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-		
+		<script type="text/javascript" src="js/search.js" defer></script>
+        <script type="text/javascript" src="js/basic_test.js" defer></script>
+		<script type="text/javascript" src="js/data_type.js" defer></script>
+	    <script type="text/javascript" src="js/pop_up.js" defer></script>
+	    <script type="text/javascript" src="js/array_test.js" defer></script>
+	    <script type="text/javascript" src="js/login.js" defer></script>
+	    <script type="text/javascript" src="js/join.js" defer></script>
+	
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
 	    
 </head>
 <body>
+	<br>
+	<br>
+	<br>
 		<div class="mx-auto" style="width: 400px;"><a href="index.html" target="_blank"><img src="img/Googleimage.png" class="img-fluid" alt="구글이미지"></a></div>
         <! img 태그는 이미지를 삽입합니다. src=경로, 이미지 깨지면 alt 출력>
-        <br>
-        <! br은 줄 바꿈입니다.>
-        <div class="mx-auto" style="width: 500px;">
-            <a href="index.html"><img src="img/googlelogo_color_272x92dp.png" class="img-fluid" alt="구글이미지"></a>
-        </div>
+        <br> <! br은 줄 바꿈입니다.>
         <br>
         <div class="text-center p-3">
                 <h3 class="text-secondary">회원가입을 환영합니다! 구글 로고를 클릭하면 메인화면으로 돌아갑니다.</h3>
@@ -28,47 +35,7 @@
         <! br은 줄 바꿈입니다.>
 </body>
 	
-	 <! 새로운 테이블 정의>
-	<div class="w-auto p-3" style="background-color: #;">
-        <!-- <table class="table table-striped table-bordered table-hover"> -->
-        <table class="table table-dark table-hover">
-	<!--<caption align="top">인기 검색어</caption>-->
-	<caption align="top">현재 검색어 : <p id="search_message"></p></caption>
-	<tbody class="table-group-divider">
-                <tr bgcolor="yellow">
-                    <td class="table-primary" width="50"><b>영화</b>
-                    </td>
-                    <td width="80" bgcolor="blue">아저씨</td>
-                    <td width="80" bgcolor="blue">아저씨</td>
-                    <td width="100">어머니</td>
-                    <td width="100">헬머니</td>
-                    <td>할부지</td>
-                </tr>
-                <tr bgcolor="red">
-                    <td class="table-secondary" width="50"><b>음악</b></td>
-                    <td>KPOP</td>
-                    <td>JPOP</td>
-                    <td>ROCK1</td>
-                    <td>ROCK2</td>
-                    <td>EUROBEAT</td>
-                </tr>
-	            <tr bgcolor="blue">
-                    <td class="table-success" width="50"><b>게임</b></td>
-                    <td>LOL</td>
-                    <td>WOW</td>
-                    <td>DIABLO</td>
-                    <td colspan="2">SUDDEN ATTACK 2</td>
-                </tr>
-		        <tr><td colspan="6"><b>외부 사이트 링크</b></td></tr> <! 4행 추가.>
-				<tr><td colspan="2"><a href="https://www.naver.com/" target="_blank">네이버</a></td><td bgcolor="yellow" colspan="2"><a href="https://www.daum.net/" target="_blank">다음</a></td>
-					<td bgcolor="purple" colspan="2"><a href="https://www.nate.com/" target="_blank"><font color="white">네이트</font></a></td></tr><! 5행 추가.>
-            </tbody>
-        </table>
-        </div>
-		<p style="text-align:right;">
-            <font size="3em" color="red">문서의 본문 텍스트, 이미지, 테이블, 자바스크립트 코드, 동영상 등</font>
-        </p>
-        <br><! br은 줄 바꿈입니다.>
+	
 </body>
 	<br><br><br><br><br><br><br><br>
    <footer class="bg-light text-center text-lg-start">
