--- a/join.html
+++ b/join.html
@@ -9,7 +9,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-		
+		<script type="text/javascript" src="js/search.js" defer></script>
+        <script type="text/javascript" src="js/basic_test.js" defer></script>
+		<script type="text/javascript" src="js/data_type.js" defer></script>
+	    <script type="text/javascript" src="js/pop_up.js" defer></script>
+	    <script type="text/javascript" src="js/array_test.js" defer></script>
+	    <script type="text/javascript" src="js/login.js" defer></script>
+	    <script type="text/javascript" src="js/join.js" defer></script>
+	
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
 	    
 </head>
 <body>
