--- a/profile/profile.html
+++ b/profile/profile.html
@@ -14,9 +14,10 @@
 		<script type="text/javascript" src="js/data_type.js" defer></script>
 	    <script type="text/javascript" src="js/pop_up.js" defer></script>
 	    <script type="text/javascript" src="js/array_test.js" defer></script>
+	    <script type="text/javascript" src="js/map.js" defer></script>
 	    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f40eb52f8b930b3e5860da63f4939cf3" autoload=false></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
-	    
+
 	    
 </head>
 <body>
